--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -4,14 +4,10 @@ on:
   push:
     branches:
       - main
-    paths:
-      - 'frontend/**'
   pull_request:
     types: [opened, synchronize, reopened, closed]
     branches:
       - main
-    paths:
-      - 'frontend/**'
 
 jobs:
   build_and_deploy_job:
@@ -33,7 +29,7 @@ jobs:
           action: "upload"
           app_location: "/frontend"
           api_location: ""
-          output_location: ""
+          output_location: "/frontend"
 
   close_pull_request_job:
     if: github.event_name == 'pull_request' && github.event.action == 'closed'
